# chang

./: .env.sample  .gitignore  Cargo.toml  README.md  compose.yml  justfile  package-lock.json  package.json
.sqlx/: query-efbc4891567b4e310529167d703befb80317b4d908ee979b8c2d39b03323c434.json
chang/: Cargo.toml  justfile
chang-core/: Cargo.toml  justfile
chang-core/.sqlx/: query-0a3d7d7711f90fd7e7dc0b38ea8ccf64fe6bcf7127ecb25c358c086880631573.json  query-138478e8a508379e1c356dfba13761ee675b74e1a726126eb7c7fd6d829d4a8f.json  query-1c8f8c9eab34edf493a2c9580c26c612ed9d81645d48994f4f1203dd653e82a8.json  query-1e8a1b2c3f195dec1fe7112b19af4f4a7d057c267fd18641f58973af044338d2.json  query-216afccbd387d6353fd11b9c2a182a7edfd45cbd626c160212109083b6f39c55.json  query-333d58a4245b09527fad2318b3414e3bcaa2cddd8d4cf14d106242ee12e40688.json  query-418786a1a639b0fcae3ceb258fec57748ef97552f442400d0a10d9aac2d94693.json  query-48b73dd5df3b520df19c32c39df64a893a028f26aa1f648f371e07f03e8d87bb.json  query-4b2d45b2c0514d28d30ae50c7a20ea4597e75b12e08fd8452a0dee8051904638.json  query-502b4c930cd79bcc6627bade827f1b5d9078ebf02130f5565d54f2ed77cdb5c6.json  query-53ab9ceb6584fdaff94d98f65ee7cc31bae3f9e2d3ac65c49addaf932981c827.json  query-5427e1d460b311e538f74e567fdd75e9fc632fd10a00422fc3fd70ac3d02974f.json  query-64f253c9b334c7a7cc0a974cfc47cdc44c6dde8bb29f1c8708996bcad1ca69c6.json  query-6ee716734a2ac90e90347fd67c5ebfe73a53be7f203ac96ba3634f85d6c5a885.json  query-75539fca7879d763d73bfcd6b0bc97bfdea4f2aa2ce16cf06698452afb01d2f2.json  query-7fe5f0806ae71ab6ef5ba54ebd25d7c8f6f3f3d155e2cfd218bef746aa9e7261.json  query-83485633892fea46a301c8aabce6577f4c201fc5a7a378700fe10705430b9950.json  query-86415ca2b42cda21552d1cd16cffec7ac0f68b706c1c1473d21f8b17313b879e.json  query-8f9ea79a4b318abb046cfa6197b75fd739926bdd41d9f04554e32424fca44f7e.json  query-9869630d691792df4ea8e5bf2547a337755848a4a9c35bfc762c03089be74ec4.json  query-9fa94e30a4a77e73e8f0ee49006d24adad81a582d938057b3c2b6acc0e89d945.json  query-a81205dd2efdecccb248288971d288247dd175b01f1b7217f42c329c9bad00de.json  query-b027f1c4eeb51a69bc9146d2aba438b20df457197668c9724abb808bfffb9a77.json  query-b9850757378dfa1f9cd33de3241190b125cc93cb0470ab0e4f96a8e90e786259.json  query-df356cef9c911b0565aeb4bd64915ee315b6bde8e86da5e683dd8edb7877600f.json  query-df84b86f8aafb793551b08de5d8cb29ebaec0b3d92ef44ec152a838a41c244af.json  query-e28de08129b4bccf4b272fcbaf7d999c075f965e3f5143bf2f3a128669200fca.json  query-e963f7e87a1607cd5a7780873a3f7c68b7902861cfe65dca0858be8fd71e042d.json  query-f5ccd03f42988109c4bd805142fdf114b8b6779c910757b0fe3f023f847f094b.json  query-fe9160ff5656a81c39b3bf4240f4c8d5b252d11344955b20f35e841d36fb805f.json
chang-core/migrations/base/: 20231113114608_init.sql
chang-core/migrations/otel/: 20231113114609_logs.sql  20231114190529_traces.sql
chang-core/migrations/tasks/: 20231226124716_init_tasks.sql
chang-core/src/: lib.rs  macros.rs
chang-core/src/database/: mod.rs
chang-core/src/db/: migration.rs  mod.rs
chang-core/src/db/events/sql/: batch_insert.sql
chang-core/src/db/spans/: mod.rs
chang-core/src/db/spans/sql/: batch_insert.sql
chang-core/src/db/tasks/: mod.rs
chang-core/src/db/tasks/sql/: batch_insert.sql  complete.sql  failed.sql  get_all.sql  get_priority_tasks.sql  get_sheduled_task.sql  get_task.sql  get_tasks.sql  get_tasks_by_kind.sql  insert.sql  set_state.sql
chang-core/src/events/: channels.rs  collector.rs  exporter.rs  mod.rs  transform.rs
chang-core/src/otel/: common.rs
chang-core/src/otel/logs/: exporter.rs  logger.rs  mod.rs  transform.rs
chang-core/src/otel/metrics/: exporter.rs  mod.rs  transform.rs
chang-core/src/otel/traces/: exporter.rs
chang-core/src/partition/: mod.rs
chang-core/src/task/: context.rs  mod.rs  queue.rs  run_task.rs  schedule_periodic_tasks.rs  task_loop.rs  task_runner.rs  traits.rs
chang-core/src/task/periodic_tasks/: init.rs  mod.rs  schedule.rs
chang-core/src/utils/: connection.rs  context.rs  mod.rs  name.rs  test.rs
chang-derive/: Cargo.toml
chang-derive/src/: lib.rs
chang/examples/: events.rs  logs.rs  partition.rs  tasks.rs
chang/src/: lib.rs
crates/chang/: Cargo.toml
crates/chang-core/: Cargo.toml
crates/chang-core/.sqlx/: query-601518a24b41a1783df92a9fa3c33be3e02adeda64b83ae645542c74b7396c63.json
crates/chang-core/migrations/events/: 20231120133254_events.sql
crates/chang-core/src/: error.rs  lib.rs
crates/chang-core/src/db/: migration.rs  mod.rs
crates/chang-core/src/db/events/: mod.rs
crates/chang-core/src/db/logs/: mod.rs
crates/chang-core/src/events/: channels.rs  collector.rs  exporter.rs  mod.rs  transform.rs
crates/chang-core/src/otel/traces/: mod.rs  transform.rs
crates/chang-derive/src/: lib.rs
crates/chang/src/: lib.rs
crates/chang/src/cli/: main.rs
crates/chang/src/cli/migrate/: mod.rs
examples/: logs.rs  metrics.rs  trace.rs  tracing-otel.rs
migrations/otel/: 20231117105814_metrics.sql
scripts/: insert-tasks.sql  seed-random-tasks.ts
src/: error.rs  lib.rs
src/cli/migrate/: mod.rs
src/db/: migration.rs  mod.rs
src/db/logs/sql/: batch_insert.sql
src/db/metrics/: mod.rs
src/db/metrics/sql/: batch_insert.sql
src/otel/: common.rs  mod.rs
src/otel/logs/: exporter.rs  logger.rs  transform.rs
src/otel/metrics/: transform.rs
src/otel/traces/: exporter.rs
