[package]
name = "chang"
version = "0.1.0"
authors = ["Michael Riezler <michael@riezler.co>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/vulpo-dev/chang"
keywords = ["postgres", "postgreSQL", "SQLx"]
description = "Postgres utilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
