[package]
name = "chang_core"
version = "0.1.0"
authors = ["Michael Riezler <michael@riezler.co>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/vulpo-dev/chang"
keywords = ["postgres", "postgreSQL", "SQLx"]
description = "Postgres utilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typeshare = "1.0.0"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
opentelemetry = { version = "0.21.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.21.0", features = ["metrics", "logs", "logs_level_enabled", "rt-tokio", "rt-tokio-current-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full", "signal"] }
tokio-util = "0.7.10"
log = { version = "0.4.20", features = ["kv_unstable", "serde", "kv_unstable_serde"] }
futures-util = "0.3.29"
futures = "0.3.29"
uuid = { version = "1.5.0", features = ["serde", "v4"]}
dotenv = "0.15.0"
anyhow = "1.0.79"
rand = "0.8.5"
cron = "0.12.0"
regex = "1.10.3"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"json",
	"migrate",
]


[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "std","smallvec", "fmt", "ansi"] }
tracing-opentelemetry = { version = "0.22", default-features = false, features = ["metrics"] }
