[package]
name = "chang"
authors = ["Michael Riezler <michael@riezler.co>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/vulpo-dev/chang"
keywords = ["postgres", "postgreSQL", "SQLx"]
description = "Postgres utilities"

[lib]
name = "chang"
path = "src/lib.rs"

[[bin]]
name = "chang"
path = "src/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chang_core = { path = "../chang-core" }
chang_derive = { path = "../chang-derive" }

clap = { version = "4.4.8", features = ["derive"] }
dotenv = "0.15.0"
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["full"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"json",
	"migrate",
]

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "std","smallvec", "fmt", "ansi"] }
tracing-opentelemetry = { version = "0.22", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.21.0", features = ["metrics", "logs", "logs_level_enabled", "rt-tokio", "rt-tokio-current-thread"] }
opentelemetry = { version = "0.21.0", features = ["logs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4.20", features = ["kv_unstable", "serde", "kv_unstable_serde"] }
